v0.12.4 [F] Plus button spacing bug [F] Body width bug

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -1,8 +1,9 @@
 body {
     background-color: white;
     margin: 0;
-    padding: 10px;
     font-family: monospace;
+    overflow-x: hidden;
+    width: 100%;
 }
 
 a {
@@ -10,8 +11,12 @@ a {
     color: deeppink;
 }
 
+header {
+    padding: 10px;
+}
+
 .container {
-    margin-top: 10px;
+    padding: 0 10px 10px 10px;
 }
 
 .name {
